--- a/bs-config.json
+++ b/bs-config.json
@@ -1,8 +1,10 @@
 {
   "server": {
-    "baseDir": "src",
+    "baseDir": "dist/client",
     "routes": {
       "/node_modules": "node_modules"
     }
   }
 }
+
+
