--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
   "name": "angular-quickstart",
   "version": "1.0.0",
-  "description": "QuickStart package.json from the documentation, supplemented with testing support",
+  "description": "QuickStart package.json from the documentationt",
   "scripts": {
-    "build": "tsc -p src/",
-    "build:watch": "tsc -p src/ -w",
-    "build:e2e": "tsc -p e2e/",
+    "clean": "gulp clean",
+    "build:client": "gulp build:client",
+    "build:server": "gulp build:server",
+    "watch:server": "gulp watch:server",
+    "compile": "gulp compile",
+    "watch": "gulp watch",
     "serve": "lite-server -c=bs-config.json",
-    "serve:e2e": "lite-server -c=bs-config.e2e.json",
-    "prestart": "npm run build",
-    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
-    "pree2e": "npm run build:e2e",
-    "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
-    "preprotractor": "webdriver-manager update",
-    "protractor": "protractor protractor.config.js",
-    "pretest": "npm run build",
-    "test": "concurrently \"npm run build:watch\" \"karma start karma.conf.js\"",
-    "pretest:once": "npm run build",
-    "test:once": "karma start karma.conf.js --single-run",
-    "lint": "tslint ./src/**/*.ts -t verbose"
+    "start": "concurrently \"npm run watch\" \"npm run serve\""
   },
   "keywords": [],
   "author": "",
@@ -32,32 +24,33 @@
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
-
+    "@types/body-parser": "^1.16.3",
+    "@types/mongodb": "^2.1.42",
     "angular-in-memory-web-api": "~0.3.0",
-    "systemjs": "0.19.40",
+    "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
+    "express": "^4.15.2",
+    "mongodb": "^2.2.25",
     "rxjs": "5.0.1",
+    "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "concurrently": "^3.2.0",
     "lite-server": "^2.2.2",
     "typescript": "~2.1.0",
-
     "canonical-path": "0.0.2",
-    "tslint": "^3.15.1",
+    "tslint": "^4.5.1",
     "lodash": "^4.16.4",
-    "jasmine-core": "~2.4.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~4.0.14",
     "rimraf": "^2.5.4",
-
+    "gulp": "^3.9.1",
+    "del": "^2.2.2",
+    "gulp-typescript": "^3.0.1",
+    "gulp-sourcemaps": "^2.4.1",
+    "run-sequence": "^1.2.2",
+    "gulp-tslint": "^7.1.0",
     "@types/node": "^6.0.46",
-    "@types/jasmine": "2.5.36"
+    "@types/express": "^4.0.35"
   },
   "repository": {}
 }
