--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "clean": "gulp clean",
     "build:client": "gulp build:client",
     "build:server": "gulp build:server",
+    "build":"npm run clean && npm run build:client && npm run build:server",
     "watch:server": "gulp watch:server",
     "compile": "gulp compile",
+    "compile:server":"gulp compile:server",
     "watch": "gulp watch",
     "serve": "lite-server -c=bs-config.json",
     "start": "concurrently \"npm run watch\" \"npm run serve\""
@@ -16,19 +18,23 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@angular/animations": "^4.0.2",
     "@angular/common": "~4.0.0",
     "@angular/compiler": "~4.0.0",
     "@angular/core": "~4.0.0",
     "@angular/forms": "~4.0.0",
     "@angular/http": "~4.0.0",
+    "@angular/material": "^2.0.0-beta.3",
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
     "@types/body-parser": "^1.16.3",
+    "@types/cors": "^2.8.1",
     "@types/mongodb": "^2.1.42",
     "angular-in-memory-web-api": "~0.3.0",
     "body-parser": "^1.17.1",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "mongodb": "^2.2.25",
     "rxjs": "5.0.1",
