--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "clean": "gulp clean",
     "build:client": "gulp build:client",
     "build:server": "gulp build:server",
-    "build":"npm run clean && npm run build:client && npm run build:server",
+    "build": "npm run clean && npm run build:client && npm run build:server",
     "watch:server": "gulp watch:server",
     "compile": "gulp compile",
-    "compile:server":"gulp compile:server",
+    "compile:server": "gulp compile:server",
     "watch": "gulp watch",
     "serve": "lite-server -c=bs-config.json",
     "start": "concurrently \"npm run watch\" \"npm run serve\""
@@ -33,10 +33,12 @@
     "@types/mongodb": "^2.1.42",
     "angular-in-memory-web-api": "~0.3.0",
     "body-parser": "^1.17.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "mongodb": "^2.2.25",
+    "ng2-charts": "^1.5.0",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
