add build client

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "serve": "lite-server -c=bs-config.json",
     "start": "concurrently \"npm run watch\" \"npm run serve\"",
     "startserver":"node dist/server/server.js",
-    "buildserver":"npm run clean && npm run build:server"
+    "buildserver":"npm run clean && npm run build:server",
+    "buildclient":"npm run clean && npm run build:server"
+
   },
   "keywords": [],
   "author": "",
