--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "concurrently \"npm run watch\" \"npm run serve\"",
     "startserver":"node dist/server/server.js",
     "buildserver":"npm run clean && npm run build:server",
-    "buildclient":"npm run clean && npm run build:server"
+    "buildclient":"npm run clean && npm run build:client"
 
   },
   "keywords": [],
