--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "watch": "gulp watch",
     "serve": "lite-server -c=bs-config.json",
     "start": "concurrently \"npm run watch\" \"npm run serve\"",
-    "startserver":"node dist/server/server.js",
-    "buildserver":"npm run clean && npm run build:server",
-    "buildclient":"npm run clean && npm run build:client"
-
+    "startserver": "node dist/server/server.js",
+    "buildserver": "npm run clean && npm run build:server",
+    "buildclient": "npm run clean && npm run build:client"
   },
   "keywords": [],
   "author": "",
@@ -41,8 +40,10 @@
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
+    "moment": "^2.18.1",
     "mongodb": "^2.2.25",
     "ng2-charts": "^1.5.0",
+    "ngx-bootstrap": "^1.6.6",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
@@ -50,14 +51,14 @@
   "devDependencies": {
     "concurrently": "^3.2.0",
     "lite-server": "^2.2.2",
-    "typescript": "~2.1.0",
+    "typescript": "~2.3.3",
     "canonical-path": "0.0.2",
     "tslint": "^4.5.1",
     "lodash": "^4.16.4",
     "rimraf": "^2.5.4",
     "gulp": "^3.9.1",
     "del": "^2.2.2",
-    "gulp-typescript": "^3.0.1",
+    "gulp-typescript": "^3.1.7",
     "gulp-sourcemaps": "^2.4.1",
     "run-sequence": "^1.2.2",
     "gulp-tslint": "^7.1.0",
