--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^4.0.2",
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/material": "^2.0.0-beta.3",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/router": "~4.0.0",
+    "@angular/animations": "4.2.6",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/common": "^4.2.6",
+    "@angular/compiler": "^4.2.6",
+    "@angular/core": "^4.2.6",
+    "@angular/forms": "^4.2.6",
+    "@angular/http": "^4.2.6",
+    "@angular/material": "^2.0.0-beta.8",
+    "@angular/platform-browser": "^4.2.6",
+    "@angular/platform-browser-dynamic": "^4.2.6",
+    "@angular/router": "^4.2.6",
     "@types/body-parser": "^1.16.3",
     "@types/cors": "^2.8.1",
     "@types/mongodb": "^2.1.42",
@@ -44,7 +45,7 @@
     "mongodb": "^2.2.25",
     "ng2-charts": "^1.5.0",
     "ngx-bootstrap": "^1.6.6",
-    "rxjs": "5.0.1",
+    "rxjs": "^5.4.2",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
   },
