--- a/package.json
+++ b/package.json
@@ -22,49 +22,49 @@
   "license": "MIT",
   "dependencies": {
     "@angular/animations": "4.2.6",
-    "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "^4.2.6",
-    "@angular/compiler": "^4.2.6",
-    "@angular/core": "^4.2.6",
-    "@angular/forms": "^4.2.6",
-    "@angular/http": "^4.2.6",
-    "@angular/material": "^2.0.0-beta.8",
-    "@angular/platform-browser": "^4.2.6",
-    "@angular/platform-browser-dynamic": "^4.2.6",
-    "@angular/router": "^4.2.6",
-    "@types/body-parser": "^1.16.3",
-    "@types/cors": "^2.8.1",
-    "@types/mongodb": "^2.1.42",
-    "angular-in-memory-web-api": "~0.3.0",
-    "body-parser": "^1.17.1",
-    "chart.js": "^2.5.0",
-    "core-js": "^2.4.1",
-    "cors": "^2.8.3",
-    "express": "^4.15.2",
-    "moment": "^2.18.1",
-    "mongodb": "^2.2.25",
-    "ng2-charts": "^1.5.0",
-    "ngx-bootstrap": "^1.6.6",
-    "rxjs": "^5.4.2",
+    "@angular/cdk": "2.0.0-beta.8",
+    "@angular/common": "4.2.6",
+    "@angular/compiler": "4.2.6",
+    "@angular/core": "4.2.6",
+    "@angular/forms": "4.2.6",
+    "@angular/http": "4.2.6",
+    "@angular/material": "2.0.0-beta.8",
+    "@angular/platform-browser": "4.2.6",
+    "@angular/platform-browser-dynamic": "4.2.6",
+    "@angular/router": "4.2.6",
+    "@types/body-parser": "1.16.3",
+    "@types/cors": "2.8.1",
+    "@types/mongodb": "2.1.42",
+    "angular-in-memory-web-api": "0.3.0",
+    "body-parser": "1.17.1",
+    "chart.js": "2.5.0",
+    "core-js": "2.4.1",
+    "cors": "2.8.3",
+    "express": "4.15.2",
+    "moment": "2.18.1",
+    "mongodb": "2.2.25",
+    "ng2-charts": "1.5.0",
+    "ngx-bootstrap": "1.6.6",
+    "rxjs": "5.4.2",
     "systemjs": "0.19.40",
-    "zone.js": "^0.8.4"
+    "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "concurrently": "^3.2.0",
-    "lite-server": "^2.2.2",
-    "typescript": "~2.3.3",
+    "concurrently": "3.2.0",
+    "lite-server": "2.2.2",
+    "typescript": "2.3.3",
     "canonical-path": "0.0.2",
-    "tslint": "^4.5.1",
-    "lodash": "^4.16.4",
-    "rimraf": "^2.5.4",
-    "gulp": "^3.9.1",
-    "del": "^2.2.2",
-    "gulp-typescript": "^3.1.7",
-    "gulp-sourcemaps": "^2.4.1",
-    "run-sequence": "^1.2.2",
-    "gulp-tslint": "^7.1.0",
-    "@types/node": "^6.0.46",
-    "@types/express": "^4.0.35"
+    "tslint": "4.5.1",
+    "lodash": "4.16.4",
+    "rimraf": "2.5.4",
+    "gulp": "3.9.1",
+    "del": "2.2.2",
+    "gulp-typescript": "3.1.7",
+    "gulp-sourcemaps": "2.4.1",
+    "run-sequence": "1.2.2",
+    "gulp-tslint": "7.1.0",
+    "@types/node": "6.0.46",
+    "@types/express": "4.0.35"
   },
   "repository": {}
 }
